2009-02-05  John W. Eaton  <jwe@octave.org>

	* file-stat.cc (base_file_stat::is_blk, base_file_stat::is_chr,
	base_file_stat::is_dir, base_file_stat::is_fifo,
	base_file_stat::is_lnk, base_file_stat::is_reg,
	base_file_stat::is_sock): Return false if object is not initialized.
	From Rafael Laboissiere <rafael@debian.org>.

2009-02-05  Jaroslav Hajek  <highegg@gmail.com>
	
	* idx-vector.h (idx_vector::idx_colon_rep,
	idx_vector::idx_scalar_rep, idx_vector::idx_range_rep,
	idx_vector::idx_vector_rep): Declare allocators.
	* idx-vector.cc: Define them.

2009-02-05  Jaroslav Hajek  <highegg@gmail.com>

	* str-vec.h (string_vector::sort): Remove implementation.
	* str-vec.cc (string_vector::sort): Move here. Use in-place sorting.
	* Array-str.cc: Fix order of header files.
	* oct-sort.cc (octave_sort<T>::merge_hi): std::copy ->
	std::copy_backward where appropriate.

2009-02-05  John W. Eaton  <jwe@octave.org>

	* Array-util.cc (zero_dims_inquire): Eliminate unused variable MATCH.

	* Sparse.cc (assign (Sparse<LT>& lhs, const Sparse<RT>& rhs)):
	Eliminate unused variable N.

	* MArray-f.cc (MArray<float>::norm (float p) const,
	MArray<FloatComplex>::norm (float p) const): Pass P to xnorm.

	* eigs-base.cc (EigsRealNonSymmetricFunc, EigsRealSymmetricFunc)
	(EigsComplexNonSymmetricFunc): Avoid unused parameter warning.
	* idx-vector.cc (idx_vector::freeze): Likewise.

2009-02-04  Jaroslav Hajek  <highegg@gmail.com>

	* oct-locbuf.h: Specialize OCTAVE_LOCAL_BUFFER to use chunked
	allocation for pointers and const pointers.

2009-02-03  Benjamin Lindner  <lindnerben@gmx.net>
	
	* Makefile.in: Add missing library reference.

2009-02-03  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::sort (octave_idx_type, sortmode)):
	Copy array on-the-fly.
	(Array<T>::sort (Array<octave_idx_type> &, octave_idx_type, sortmode)):
	Copy array on-the-fly, use bare pointers rather than vec_index.

	* Array-d.cc (Array<double>::sort (octave_idx_type, sortmode)):